Clean up membership page

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -4,7 +4,7 @@ import { urlConstants } from '@/src/text/urlConstants';
 
 # Membership at Sequoia Fabrica
 
-# Join Our Community
+## Join Our Community
 
 We're thrilled you're interested in joining our community of artists, creators, and makers. 
 
@@ -19,27 +19,31 @@ We do not currently have the ability to self-fund lower membership rates than th
 
 Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
-# What Membership Means
+## What Membership Means
 
 - **Full Access:** Members have full access to our workshop and all equipment during open hours. Members are allowed to bring guests!
 - **A Supportive Community:** We believe every member contributes to the spirit of Sequoia Fabrica, whether by collaborating on projects, volunteering, mentoring others, or helping maintain the space. This is a place to connect, create, and grow together.
 - **Learning Opportunities:** Members are encouraged to share skills and knowledge with each other. Through workshops, peer mentoring, Grove projects, and informal collaboration, there are always opportunities to teach and learn from one another.
 - **A Voice**: As a member, you have a say in shaping Sequoia Fabrica. You'll be able to participate in organizational meetings and decision-making. Your feedback and ideas are critical as we continue improving our community.
 
-# Getting Started with Membership
+## Getting Started with Membership
 We've tried to make the process for membership as straightforward as possible. If you have any questions throughout the process, please [reach out to us](./contact).
+
+<Callout variant='info'>
+  This process is still being ironed out as we develop a stable system for onboarding new members. The exact steps you follow might differ.
+</Callout>
 
 1. **Visit Us:** Get a feel for the space and meet our community. We encourage potential members to visit us during one of our [events](./events) or to volunteer with us, and then [schedule a tour](./contact).
 
 2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
 
-4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
+3. **Orientation:** All new members go through an orientation session to become familiar with the tools, safety protocols, and community norms of Sequoia Fabrica. We will contact you about scheduling a time. Note that further training may be required for specific machinery.
 
-5. **Orientation:** All new members go through an orientation session to become familiar with the tools, safety protocols, and community norms of Sequoia Fabrica. We will contact you about scheduling a time. Note that further training may be required for specific machinery.
+4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
 5. **Become a Part of the Community:** Once you're a member, you will have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), attend and help out with workshops, and be a part of our collaborative environment. Members are encouraged to host events and collaborate with the community. They are expected to help maintain the space.
 
-# Still have Questions?
+## Still have Questions?
 Check our [FAQ page](./faq) for answers. If you don't find what you are looking for, please [reach out to us](./contact).
 
 export default function MDXPage({ children }) {
