--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -38,13 +38,13 @@ Woodworking:
 Digital Fabrication:
 * 2x Prusa MK3S 3d printers
 * XTool 55W CO2 laser 
-* Maslow CNC
+* Maslow4 CNC
 
 For a full list [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
 
-## **Are you a 501(c)(3)?**
+## **Are you a non-profit? 501(c)(3)?**
 
-Yes. The IRS has determined we are a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes. 
+Yes. We're a California Public Benefit Corporation and the IRS has determined we are a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes. 
 
 You can [view our final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
 
@@ -62,9 +62,9 @@ Read more about [our](https://wiki.sequoiafabrica.org/wiki/Workshop_Norms) [valu
 
 ## How will membership work?
 
-Members will complete an application, sign up to pay monthly dues, and be approved by our board and membership. Then they will have an orientation, after which they will receive an access token, and, when trained, can use our shared equipment.
+Members should visit our space, complete an application, sign up to pay monthly dues, and be approved by our board and membership. Then they will have an orientation, after which they will receive an access token, and, when trained, can use our shared equipment.
 
-Members elect our board and officers and have a voice in the organization.
+Members get access to our Slack and can participate in Sequoia Fabrica meetings.
 
 We ask that Members join a Grove and contribute to the upkeep of our shared space! Hosting classes is encouraged, you don’t need to be a subject matter expert!
 
@@ -78,9 +78,11 @@ We would like to offer more flexible dues in the future, provided we can find a 
 
 ## Can I bring my kids?
 
-Yes! Children are allowed in the workshop with supervision of a parent or caregiver. 
+Children are welcome under supervision of a parent or guardian. 
 
-We have some events and classes specifically for children and families!
+We offer some events and classes specifically for families. 
+
+Read more about our policies and resources for children [on our wiki](https://wiki.sequoiafabrica.org/wiki/Saplings).
 
 ## Can I bring my pet?
 
