Clean up FAQ; add loan equipment link

--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -19,28 +19,28 @@ If our model does not meet your needs, there are many [makerspaces in the Bay Ar
 
 ## What tools do you have?
 
-As of 3/2024 our tools include:
+Our tools are regularly changing. For a full list, [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
+Below is an abridged list of some tools.
 
-Textiles:
-* Domestic sewing machines
-* Embroidery machine
-* Knitting machines
-* Industrial serger
-* Industrial straight stitch sewing machine
-* Industrial walking foot sewing machine
+**Textiles:**
+Domestic sewing machines,
+Embroidery machine,
+Knitting machines,
+Industrial serger,
+Industrial straight stitch sewing machine,
+Industrial walking foot sewing machine,
+Screenprinting Supplies.
 
-Woodworking:
-* Makita cordless track saw
-* DeWalt cordless power tools
-* Dremel cordless rotary tool
-* Assorted screwdrivers, hammers, clamps, etc
+**Woodworking:**
+Makita cordless track saw,
+DeWalt cordless power tools,
+Dremel cordless rotary tool,
+Variety of hand tools, workholding, etc.
 
-Digital Fabrication:
-* 2x Prusa MK3S 3d printers
-* XTool 55W CO2 laser 
-* Maslow4 CNC
-
-For a full list [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
+**Digital Fabrication:**
+2x Prusa MK3.9S 3d printers,
+XTool 55W CO2 laser,
+Cricut Vinyl Cutter.
 
 ## **Are you a non-profit? 501(c)(3)?**
 
@@ -92,13 +92,16 @@ At this time the workshop is not setup for pets, but we hope to offer some pet f
 
 By prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. We maintain a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we're looking for!
 
+If you have something you'd like to loan long-term to Sequoia Fabrica, we've [got a form](https://docs.google.com/forms/d/e/1FAIpQLSfkrRbrPWCJe-pVXQRyJ7k1nDh0zrLgVVYZIwJPtpxaV6SVlg/viewform?usp=sf_link) for that!
+Loans are not tax-deductible, and we cannot promise the equipment will remain in the state it was when you loaned it.
+
 ## Can I take a class at Sequoia Fabrica if I can't afford the workshop fees?
 
 If this applies to you, please [get in touch](./contact). 
 
 ## What is a Grove?
 
-A Grove is the term we use to describe smaller groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, robotics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove. 
+A [Grove](https://wiki.sequoiafabrica.org/wiki/Grove) is the term we use to describe smaller interest groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, robotics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove. 
 
 ## Why did you choose the name Sequoia Fabrica?
 
