Add reference to new scheduled orientation times

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -35,9 +35,9 @@ We've tried to make the process for membership as straightforward as possible. I
 
 1. **Visit Us:** Get a feel for the space and meet our community. We encourage potential members to visit us during one of our [events](./events) or to volunteer with us, and then [schedule a tour](./contact).
 
-2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
+2. **Apply:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
 
-3. **Orientation:** All new members go through an orientation session to become familiar with the tools, safety protocols, and community norms of Sequoia Fabrica. We will contact you about scheduling a time. Note that further training may be required for specific machinery.
+3. **Sign up for an Orientation:** All new members go through an orientation session to become familiar with the groves, safety protocols, and community norms of Sequoia Fabrica. <a href={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. To respect the time our members volunteer, we ask you try to make this time work. If there is no way you can attend this time, contact us about scheduling at a different time. This orientation does not equip you with training for how to use specific tools, rather it is an overview of the space, what we offer, and our operating policies.
 
 4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
