--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -1,7 +1,7 @@
 import DocumentLayout from '@/src/components/docs/DocumentLayout'
 
 export const metadata = {
-  title: "About Sequoia Fabrica",
+  title: "About Us",
   description: ""
 };
 
