--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -7,25 +7,28 @@ export const metadata = {
 
 # About Sequoia Fabrica
 
-Welcome to Sequoia Fabrica, an intergenerational community workshop fostering the makers of today and tomorrow in San Francisco. 
+Welcome to Sequoia Fabrica, a 501(c)(3) non-profit, community workshop and makerspace in San Francisco.
 
+Our organization was founded November 2023, and is 100% volunteer run. We are supported by donations and memberships. Most of our equipment is second-hand or donated.
+
+## What We Offer 
+
+* Weekly [classes and events](./events), open to the public, on subjects including arts, crafts, technology, and tools. 
+* Affordable [memberships](./membership), equipment and infrastructure for learning, arts, and creative projects.
+* Physical space for exhibitions, meetups, community and educational events.
 ## Why We Do What We Do
 
 To build great things, you need good [tools](https://wiki.sequoiafabrica.org/wiki/Main_Page) and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](https://hackerspaces.org), we offer shared access to high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
 
 We believe in the transformative power of access to tools and technology. Our mission is to democratize the ability to create, innovate, and explore artistic and scientific realms including but not limited to: Fine Arts, Electronics, Sewing and Woodcrafts. 
 
-## Inclusive and Accessible
+## Who We Are
 
-Sequoia Fabrica strives to be a force for inclusivity in the world of art, technology, and craftsmanship. Our doors are open to our members, and we engage with the broader community through [events and workshops](./events). We are working on securing grants to ensure that nobody is turned away for lack of funds.
-
-## Our Founding Team
-
-Sequoia Fabrica is brought to life by a group of founding members passionate about sewing, electronics, wood crafts, and fine arts. They maintain areas of the workshop, teach workshops, and onboard new community members.
+As of July 2024, our community is around twenty members and volunteers. Together we teach classes, take care of administrative tasks, maintain our machines and facility. We have a range of interests including woodworking, fiber arts, electronics, digital fabrication, and fine arts. Our members include designers, educators, engineers, public servants, service workers, and working artists. 
 
 ## Join Our Community
 
-As we embark on this exciting journey, we invite you to be a part of Sequoia Fabrica. Whether you're a seasoned maker, a curious beginner, or someone who believes in the power of community and creativity, there's a place for you here. We're always searching for volunteers to help maintain the space, run classes, and be welcoming community members. 
+Whether you're a seasoned maker, a curious beginner, or someone who believes in the power of community and creativity, there's a place for you here. We're always searching for [volunteers](https://wiki.sequoiafabrica.org/wiki/Volunteers) to help maintain the space, run classes, and be welcoming community members. 
 
 ## Still Have Questions?
 
