RSVP required for events

--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -14,7 +14,7 @@ We're convienently near several major bus lines  (19, 22, 55), a bike lane (on 1
 
 ## How can I access the space?
 
-We are open to the general public for regular, hosted events and workshops. Anyone is welcome to sign up and attend these! 
+We are open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! Unless stated, RSVP is required.
  
 If you’d like access to the space or to use our equipment at other times, you must [become a member](./membership)!
 
