Added new banner image, GoatCounter tracking for BookWhen, Donate Links, Wiki

--- a/src/pages/docs/contact.mdx
+++ b/src/pages/docs/contact.mdx
@@ -19,12 +19,12 @@ You can follow updates on our organization through the platforms below, or if yo
 
 - <a href={urlConstants.instagram}>Instagram</a>
 - <a href={urlConstants.mastodon}>Mastodon</a>
-- <a href={urlConstants.bookWhen}>Events</a>
+- <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Events</a>
 
 
 ## Donate
 
-- <a href={urlConstants.openCollective}>Open Collective</a>
+- <a href={urlConstants.donateOC} data-goatcounter-click={urlConstants.donateOC}>Open Collective</a>
 
 export default function MDXPage({ children }) {
   return <DocumentLayout metadata={metadata}>{children}</DocumentLayout>;
