--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -42,7 +42,7 @@ We've tried to make the process for membership as straightforward as possible. I
 
 2. **Apply:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
 
-3. **Sign up for an Orientation:** All new members go through an orientation session to become familiar with the groves, safety protocols, and community norms of Sequoia Fabrica. <a href={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. To respect the time our members volunteer, we ask you try to make this time work. If there is no way you can attend this time, contact us about scheduling at a different time. This orientation does not equip you with training for how to use specific tools, rather it is an overview of the space, what we offer, and our operating policies.
+3. **Sign up for an Orientation:** All new members go through an orientation session to become familiar with the groves, safety protocols, and community norms of Sequoia Fabrica. <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. To respect the time our members volunteer, we ask you try to make this time work. If there is no way you can attend this time, contact us about scheduling at a different time. This orientation does not equip you with training for how to use specific tools, rather it is an overview of the space, what we offer, and our operating policies.
 
 4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
