About page - Impact

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -9,22 +9,36 @@ export const metadata = {
 
 Welcome to Sequoia Fabrica, a 501(c)(3) non-profit, community workshop and makerspace in San Francisco.
 
-Our organization was founded November 2023, and is 100% volunteer run. We are supported by donations and memberships. Most of our equipment is second-hand or donated.
+Our organization was founded November 2023. We are supported by donations and memberships. Most of our equipment is second-hand or donated. We are run by 100% volunteer labor.
 
 ## What We Offer 
 
 * Weekly [classes and events](./events), open to the public, on subjects including arts, crafts, technology, and tools. 
-* Affordable [memberships](./membership), equipment and infrastructure for learning, arts, and creative projects.
+* Affordable [memberships](./membership), access to equipment and infrastructure for learning, arts, prototyping and creative projects.
 * Physical space for exhibitions, meetups, community and educational events.
+
+## Our Impact
+
+* As of July 2024, we have offered more than 65  public events (classes, meetups) to our community, reaching over 300 attendees.
+* Classes topics cover various crafts, from woodworking to sewing, electronics to digital fabrication. Two thirds of our classes concern sewing or fiber arts (quilting, knitting, embroidery, weaving, etc).
+* Our classes are very affordable, $20 on average.  We also ensure that no one is turned away for lack of funds.
+* 85% of our classes are specifically designed for beginners.
+* Workshops for children and familes represent 10% of our classes today.
+* We host, on average, two free meetups monthly.
+
+## Who We Are
+
+As of July 2024, our community is around twenty five members and volunteers. Together we teach classes, take care of administrative tasks, maintain our machines and facility. 
+
+Our members include designers, educators, engineers, public servants, service workers, caregivers, and working artists. 
+
+Our community has a strong emphasis on fiber arts, and a range of other interests including but not limited to woodworking, electronics, digital fabrication, origami, print-making, and painting. 
+
 ## Why We Do What We Do
 
 To build great things, you need good [tools](https://wiki.sequoiafabrica.org/wiki/Main_Page) and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](https://hackerspaces.org), we offer shared access to high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
 
 We believe in the transformative power of access to tools and technology. Our mission is to democratize the ability to create, innovate, and explore artistic and scientific realms including but not limited to: Fine Arts, Electronics, Sewing and Woodcrafts. 
-
-## Who We Are
-
-As of July 2024, our community is around twenty members and volunteers. Together we teach classes, take care of administrative tasks, maintain our machines and facility. We have a range of interests including woodworking, fiber arts, electronics, digital fabrication, and fine arts. Our members include designers, educators, engineers, public servants, service workers, and working artists. 
 
 ## Join Our Community
 
