simplify impact language

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -19,12 +19,13 @@ Our organization was founded November 2023. We are supported by donations and me
 
 ## Our Impact
 
-* As of July 2024, we have offered more than 65  public events (classes, meetups) to our community, reaching over 300 attendees.
-* Classes topics cover various crafts, from woodworking to sewing, electronics to digital fabrication. Two thirds of our classes concern sewing or fiber arts (quilting, knitting, embroidery, weaving, etc).
-* Our classes are very affordable, $20 on average.  We also ensure that no one is turned away for lack of funds.
-* 85% of our classes are specifically designed for beginners.
-* Workshops for children and familes represent 10% of our classes today.
-* We host, on average, two free meetups monthly.
+From January - July 2024:
+* Sequoia Fabrica has offered more than 65 classes and meetups. We have reached over 350 attendees.
+* Class topics include crafts, woodworking, sewing, electronics and digital fabrication. Two thirds of classes offered involve sewing or fiber arts.
+* Our classes are affordable, $20 on average. Sequoia Fabrica also ensures that no one is turned away for lack of funds.
+* 85% of classes are designed for beginners. Workshops for children and families represent 10% of our classes.
+* Sequoia Fabrica partnered with local governments to teach 6 free, off-site workshops in San Francisco and San Mateo counties.
+* The workshop hosts, on average, two free meetups monthly.
 
 ## Who We Are
 
