--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -8,21 +8,21 @@ export const metadata = {
 
 ## Where are you located?
 
-We're located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. 
+Sequoia Fabrica is located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. 
 
-We're convienently near several major bus lines  (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
+Our workshop is near several major bus lines (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
 
 ## How can I access the space?
 
-We are open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! Unless stated, RSVP is required.
+The makerspace is open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! Unless stated, RSVP is required.
  
-If you’d like access to the space or to use our equipment at other times, you must [become a member](./membership)!
+If you’d like access to the facility or to use equipment at other times, you must [become a member](./membership)!
 
-If our model does not meet your needs, there are many [makerspaces in the Bay Area](https://makernexuswiki.com/wiki/Maker_Spaces_In_San_Francisco_area) and [around the world](https://wiki.hackerspaces.org/List_of_Hacker_Spaces).
+If this model does not meet your needs, there are many [makerspaces in the Bay Area](https://makernexuswiki.com/wiki/Maker_Spaces_In_San_Francisco_area) and [around the world](https://wiki.hackerspaces.org/List_of_Hacker_Spaces).
 
 ## What tools do you have?
 
-Our tools are regularly changing. For a full list, [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
+Tools are regularly changing. For a full list, [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
 Below is an abridged list of some tools.
 
 **Textiles:**
@@ -47,17 +47,17 @@ Cricut Vinyl Cutter.
 
 ## **Are you a non-profit? 501(c)(3)?**
 
-Yes. We're a California Public Benefit Corporation and the IRS has determined we are a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes. 
+Yes. Sequoia Fabrica is a California Public Benefit Corporation and the IRS has determined it is a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes to the extent allowed by law.
 
-You can [view our final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
+You can [view the final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
 
 EIN: 93-4496044
 
 ## Why are you starting another space?
 
-We think San Francisco needs more workshops! 
+San Francisco needs more workshops! 
 
-Our founding members have taught at other maker spaces and community organizations for over a decade and learned a lot about what works from these experiences. 
+Our members have taught at other makerspaces, schools, and community organizations for over a decade and learned a lot about what works from these experiences. 
 
 We want to create a clean, safe environment where members and visitors can focus on learning, sharing, and making things. 
 
@@ -65,19 +65,19 @@ Read more about [our](https://wiki.sequoiafabrica.org/wiki/Workshop_Norms) [valu
 
 ## How will membership work?
 
-Members should visit our space, complete an application, sign up to pay monthly dues, and be approved by our board and membership. Then they will have an orientation, after which they will receive an access token, and, when trained, can use our shared equipment.
+All prospective members should visit our space, complete an application, and sign up for an orientation. The Board and membership evaluate all applications. If approved, you will be asked to pay dues and receive a key. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
 
-Members get access to our Slack and can participate in Sequoia Fabrica meetings.
-
-We ask that Members join a Grove and contribute to the upkeep of our shared space! Hosting classes is encouraged, you don’t need to be a subject matter expert!
+Members are responsible for contributing to the upkeep of our shared space. Hosting classes is encouraged, you don’t need to be a subject matter expert!
 
 Please review our [membership page](./membership) for more information!
 
 ## How much does membership cost?
 
-Our monthly dues are similar to other Bay Area workshops, $100-150 a month.
+Monthly dues are similar to other Bay Area workshops, $100-150 a month.
 
-We would like to offer more flexible dues in the future, provided we can find a funding source and meet our expenses. 
+We would like to offer more flexible dues in the future, provided we can find a funding source and meet all expenses. 
+
+Sequoia Fabrica also has a [volunteer program](https://wiki.sequoiafabrica.org/wiki/Volunteers).
 
 ## Can I bring my kids?
 
@@ -93,14 +93,14 @@ At this time the workshop is not setup for pets, but we hope to offer some pet f
 
 ## Do you accept in kind donations?
 
-By prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. We maintain a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we're looking for!
+With prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. Sequoia Fabrica maintains a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we are looking for! We can provide a receipt for your in-kind donation upon request. 
 
 If you have something you'd like to loan long-term to Sequoia Fabrica, we've [got a form](https://docs.google.com/forms/d/e/1FAIpQLSfkrRbrPWCJe-pVXQRyJ7k1nDh0zrLgVVYZIwJPtpxaV6SVlg/viewform?usp=sf_link) for that!
 Loans are not tax-deductible, and we cannot promise the equipment will remain in the state it was when you loaned it.
 
 ## Can I take a class at Sequoia Fabrica if I can't afford the workshop fees?
 
-If this applies to you, please [get in touch](./contact). 
+If this applies to you, please [get in touch](./contact). Scholarships are available. 
 
 ## What is a Grove?
 
