--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -12,11 +12,13 @@ Sequoia Fabrica is located at 1736 18th Street in San Francisco’s Potrero Hill
 
 Our workshop is near several major bus lines (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
 
+Our facility is at sidewalk level, please enter through the glass double doors.
+
 ## How can I access the space?
 
 The makerspace is open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! Unless stated, RSVP is required.
  
-If you’d like access to the facility or to use equipment at other times, you must [become a member](./membership)!
+If you’d like access to the facility or to use equipment at other times, you must [become a member](./membership) or [volunteer](https://wiki.sequoiafabrica.org/wiki/Volunteers)!
 
 If this model does not meet your needs, there are many [makerspaces in the Bay Area](https://makernexuswiki.com/wiki/Maker_Spaces_In_San_Francisco_area) and [around the world](https://wiki.hackerspaces.org/List_of_Hacker_Spaces).
 
@@ -45,6 +47,12 @@ Variety of hand tools, workholding, etc.
 XTool 55W CO2 laser,
 Cricut Vinyl Cutter.
 
+## Can I have a tour?
+
+Our workshop is run by volunteers and we typically do not have the capacity to schedule one-off tours.
+
+If you'd like to see the space please [sign up for an event](https://bookwhen.com/sequoiafabrica). 
+
 ## **Are you a non-profit? 501(c)(3)?**
 
 Yes. Sequoia Fabrica is a California Public Benefit Corporation and the IRS has determined it is a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes to the extent allowed by law.
@@ -53,17 +61,15 @@ You can [view the final determination letter here](https://static.miraheze.org/s
 
 EIN: 93-4496044
 
-## Why are you starting another space?
+## Why did you start another space?
 
 San Francisco needs more workshops! 
 
-Our members have taught at other makerspaces, schools, and community organizations for over a decade and learned a lot about what works from these experiences. 
-
-We want to create a clean, safe environment where members and visitors can focus on learning, sharing, and making things. 
+Sequoia Fabrica seeks to be a clean, safe environment with working tools, where members and visitors can focus on learning, sharing, and making things. 
 
 Read more about [our](https://wiki.sequoiafabrica.org/wiki/Workshop_Norms) [values](./code_of_conduct).
 
-## How will membership work?
+## How does membership work?
 
 All prospective members should visit our space, complete an application, and sign up for an orientation. The Board and membership evaluate all applications. If approved, you will be asked to pay dues and receive a key. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
 
