Minor FAQ changes

--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -14,9 +14,11 @@ Our workshop is near several major bus lines (19, 22, 55), a bike lane (on 17th 
 
 Our facility is at sidewalk level, please enter through the glass double doors.
 
+Find us on [OpenStreetMap](https://www.openstreetmap.org/node/11571985859) or [Google Maps](https://maps.app.goo.gl/7fiutyz9KxsT1eXc7).
+
 ## How can I access the space?
 
-The makerspace is open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! Unless stated, RSVP is required.
+The makerspace is open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! RSVP is required, unless stated.
  
 If you’d like access to the facility or to use equipment at other times, you must [become a member](./membership) or [volunteer](https://wiki.sequoiafabrica.org/wiki/Volunteers)!
 
@@ -53,22 +55,6 @@ Our workshop is run by volunteers and we typically do not have the capacity to s
 
 If you'd like to see the space please [sign up for an event](https://bookwhen.com/sequoiafabrica). 
 
-## **Are you a non-profit? 501(c)(3)?**
-
-Yes. Sequoia Fabrica is a California Public Benefit Corporation and the IRS has determined it is a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes to the extent allowed by law.
-
-You can [view the final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
-
-EIN: 93-4496044
-
-## Why did you start another space?
-
-San Francisco needs more workshops! 
-
-Sequoia Fabrica seeks to be a clean, safe environment with working tools, where members and visitors can focus on learning, sharing, and making things. 
-
-Read more about [our](https://wiki.sequoiafabrica.org/wiki/Workshop_Norms) [values](./code_of_conduct).
-
 ## How does membership work?
 
 All prospective members should visit our space, complete an application, and sign up for an orientation. The Board and membership evaluate all applications. If approved, you will be asked to pay dues and receive a key. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
@@ -97,6 +83,18 @@ Read more about our policies and resources for children [on our wiki](https://wi
 
 At this time the workshop is not setup for pets, but we hope to offer some pet focused crafts and workshops in the future!
 
+## Can I take a class at Sequoia Fabrica if I can't afford a workshop fee?
+
+Yes, a limited number of scholarships are available for classes. Please [get in touch](./contact). 
+
+## **Are you a non-profit? 501(c)(3)?**
+
+Yes. Sequoia Fabrica is a California Public Benefit Corporation and the IRS has determined it is a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes to the extent allowed by law.
+
+You can [view the final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
+
+EIN: 93-4496044
+
 ## Do you accept in kind donations?
 
 With prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. Sequoia Fabrica maintains a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we are looking for! We can provide a receipt for your in-kind donation upon request. 
@@ -104,13 +102,17 @@ With prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:seq
 If you have something you'd like to loan long-term to Sequoia Fabrica, we've [got a form](https://docs.google.com/forms/d/e/1FAIpQLSfkrRbrPWCJe-pVXQRyJ7k1nDh0zrLgVVYZIwJPtpxaV6SVlg/viewform?usp=sf_link) for that!
 Loans are not tax-deductible, and we cannot promise the equipment will remain in the state it was when you loaned it.
 
-## Can I take a class at Sequoia Fabrica if I can't afford the workshop fees?
+## Why did you start another space?
 
-If this applies to you, please [get in touch](./contact). Scholarships are available. 
+San Francisco needs more workshops and 2023-24 is a window for opportunity for non-profits and arts organizations to find affordable space in the city. 
 
-## What is a Grove?
+Our organization seeks to offer:
 
-A [Grove](https://wiki.sequoiafabrica.org/wiki/Grove) is the term we use to describe smaller interest groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, robotics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove. 
+* High quality tools and infrastructure for local artists, makers, and creators
+* A clean and safe environment where members and visitors can focus on projects
+* Robust public program of workshops, trainings, and community partnerships
+* Culture that encourages teaching and learning
+* Straight-forward governance and financial stability
 
 ## Why did you choose the name Sequoia Fabrica?
 
@@ -119,6 +121,11 @@ Sequoia refers to the iconic California redwood tree. These trees grow from a ti
 Fabrica comes from the Latin word meaning workshop or factory. It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines. 
 
 Conveniently, our initials are S.F.
+
+## What is a Grove?
+
+A [Grove](https://wiki.sequoiafabrica.org/wiki/Grove) is the term we use to describe smaller interest groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove. 
+
 
 export default function MDXPage({ children }) {
   return <DocumentLayout metadata={metadata}>{children}</DocumentLayout>;
